@@ -307,6 +307,10 @@
       \pkg{stats}, to extract from model objects a suitable value for
       use in BIC calculations.  An S4 generic derived from it is defined
       in package \pkg{stats4}.
+
+      \item Code for reference-class methods is now examined for
+      possible errors in non-local assignments.
+
     }
   }
 
